
== tekUI Changelog ==

=== 0.8k: ===

 * Area: reenabled "auto" mode for Width and Height
 * Documentation: Added layouting section, improved examples, corrections
 * Corrected usage of directory iterators from lfs.dir(), now working with
 LuaFilesystem 1.5 again
 * Debug: added wrout() function, simplified
 * Visual API: tek_lib_visual_gettime() stray line removed, causing Lua
 stack corruption
 * PopItem: beginPopup() could attempt to descend into items that have no
 children, corrected
 * Visual API: Added an option to create images from tables
 * Minor changes and corrections for tekUI to go together with the latest
 compiler issues and LuaJIT

=== 0.8j: ===
 
 * Gadget renamed to Widget, ListGadget renamed to Lister, ImageGadget renamed
 to ImageWidget
 * Drawable class: removed
 * Object: Added class-wide handlers and a copy-on-write mechanism for
 duplicating handlers on object-level on demand; static initialization of
 handlers is no longer supported
 * Element: added onSetStyle() and obSetClass(), some bugs fixed in style
 sheet processing
 * Application: hide() hardened for side-effects from shutting down while
 hide() is still in progress
 * Area: removed Drawable attribute, show() no longer has a drawable argument,
 removed Margin, added getMargin() and getMinmax(), MinMax, Rect are Region
 objects now
 * Widget:onClick(), onHold(), onDblClick() added
 * Group:addMember() now allows elements to be added to uninitialized groups
 * Lister:onDoubleClick() renamed to onDblClick() and documented
 * Slider:onHold() documented
 * Visual: added setTextureOrigin(), pushClipRect(), popClipRect(), drawing
 functions no longer receive texture origins as arguments, added setBGPen(),
 which can be used to set a background color or a texture for fillRect(),
 renamed copyarea() to blitArea(), function names are now in lowerCamelCase
 * ScrollGroup: copyArea() renamed to blitArea()
 * Window: Drawable attribute added, it is now created in show() and