@@ -8,10 +8,10 @@ Source software and its license is compatible with the GPL.
 
 ---------------------------------------------------------------------
 
-Copyright © 2008, 2009, 2010 by the authors:
+Copyright © 2008 - 2012 by the authors:
 
- * Timm S. Müller
- * Franciska Schulze
+ * Timm S. Müller <tmueller at schulze-mueller.de>
+ * Franciska Schulze <fschulze at schulze-mueller.de>
 
 Permission is hereby granted, free of charge, to any person obtaining
 a copy of this software and associated documentation files (the
