@@ -10,6 +10,13 @@
 		<h2>
 			tekUI Changelog
 		</h2>
+		<blockquote>
+			<ul>
+				<li>
+					Corrected some addresses and years in the documentation
+				</li>
+			</ul>
+		</blockquote>
 		<h3>
 			0.8k:
 		</h3>
