@@ -18,15 +18,15 @@
 		</p>
 		<hr />
 		<p>
-			Copyright &#169; 2008, 2009, 2010 by the authors:
+			Copyright &#169; 2008 - 2012 by the authors:
 		</p>
 		<blockquote>
 			<ul>
 				<li>
-					Timm S. M&#252;ller
+					Timm S. M&#252;ller &lt;tmueller at schulze-mueller.de&gt;
 				</li>
 				<li>
-					Franciska Schulze
+					Franciska Schulze &lt;fschulze at schulze-mueller.de&gt;
 				</li>
 			</ul>
 		</blockquote>
