@@ -258,7 +258,7 @@
 			<blockquote>
 				<ul>
 					<li style="list-style-type: none">
-						<a href="http://tekui.teklib.org/">http://tekui.teklib.org/</a> 
+						<a href="http://tekui.neoscientists.org/">http://tekui.neoscientists.org/</a> 
 					</li>
 				</ul>
 			</blockquote>
@@ -455,7 +455,7 @@
 		</div>
 		<div class="node"><h2><a name="clibrary" id="clibrary">2.5. C library</a></h2>
 			<p>
-				The C library is based on the <a href="http://www.teklib.org/">TEKlib</a> 
+				The C library is based on the <a href="http://teklib.neoscientists.org/">TEKlib</a> 
 				middleware project. All required modules are contained in tekUI's
 				source code distribution, to reduce the hassle of building and
 				installing the software.
@@ -835,7 +835,7 @@ ui.Application:new
 				booleans and are indicative of the Element's state, such as: Is it in
 				selected state, is it pressed down, is it hovered by the mouse, is it
 				receiving the input? The
-				<a href="manual.html#Object:onPress">Object:onPress</a> handler, for example,
+				<a href="manual.html#Widget:onPress">Widget:onPress</a> handler, for example,
 				can be used to catch not only releases, but also presses on the
 				element:
 			</p>
